--- a/CarValet/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/CarValet/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -71,7 +71,64 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Aq-1X-mKN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2539" y="-276"/>
+            <point key="canvasLocation" x="2539" y="-270"/>
+        </scene>
+        <!--Year Edit View Controller-->
+        <scene sceneID="0Db-JX-pkr">
+            <objects>
+                <viewController id="nGT-6t-bmf" customClass="YearEditViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="sE9-hN-e91"/>
+                        <viewControllerLayoutGuide type="bottom" id="SXE-nX-Dxf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Yax-gC-dab">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zP0-RT-xZg">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="barTintColor" red="1" green="0.23097706230000001" blue="0.10079714889999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <items>
+                                    <navigationItem title="Year" id="3vi-K8-Wyb">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="UOt-hi-Nm4">
+                                            <connections>
+                                                <action selector="editCancelled:" destination="nGT-6t-bmf" id="1BJ-1P-q1f"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="AaB-fm-fVm">
+                                            <connections>
+                                                <action selector="editDone:" destination="nGT-6t-bmf" id="Wj7-kc-CYa"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a2u-Yb-YJs">
+                                <rect key="frame" x="-80" y="310" width="480" height="162"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="nGT-6t-bmf" id="JlF-Fm-wJr"/>
+                                    <outlet property="delegate" destination="nGT-6t-bmf" id="QSq-Ba-x0N"/>
+                                </connections>
+                            </pickerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="zP0-RT-xZg" firstAttribute="top" secondItem="sE9-hN-e91" secondAttribute="bottom" id="Dt6-Uz-Dct"/>
+                            <constraint firstAttribute="trailing" secondItem="zP0-RT-xZg" secondAttribute="trailing" id="FzL-eW-cPv"/>
+                            <constraint firstAttribute="centerX" secondItem="a2u-Yb-YJs" secondAttribute="centerX" id="Gnv-8T-asG"/>
+                            <constraint firstItem="zP0-RT-xZg" firstAttribute="leading" secondItem="Yax-gC-dab" secondAttribute="leading" id="ZwF-Wu-AmK"/>
+                            <constraint firstItem="SXE-nX-Dxf" firstAttribute="top" secondItem="a2u-Yb-YJs" secondAttribute="bottom" constant="20" symbolic="YES" id="gfv-RB-nUs"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="editPicker" destination="a2u-Yb-YJs" id="LI2-rv-fC8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="be0-cE-mW0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2539" y="354"/>
         </scene>
         <!--Car Table View Controller-->
         <scene sceneID="eTf-La-OUg">
@@ -258,15 +315,15 @@
                                             <segue destination="hE8-SO-Kzm" kind="modal" identifier="ModelEditSegue" id="gQR-H4-IMv"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="LEV-uX-oeh" style="IBUITableViewCellStyleDefault" id="E8a-9V-wCU">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="LEV-uX-oeh" style="IBUITableViewCellStyleDefault" id="E8a-9V-wCU">
                                         <rect key="frame" x="0.0" y="174" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="E8a-9V-wCU" id="dK7-2f-Uvg">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Year" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="LEV-uX-oeh">
-                                                    <rect key="frame" x="15" y="0.0" width="290" height="43"/>
+                                                    <rect key="frame" x="15" y="0.0" width="270" height="43"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -274,6 +331,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="nGT-6t-bmf" kind="modal" identifier="YearEditSegue" id="Z0H-2J-AhA"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -471,6 +531,6 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="ofh-9h-tgQ"/>
+        <segue reference="gQR-H4-IMv"/>
     </inferredMetricsTieBreakers>
 </document>
