--- a/CarValet/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/CarValet/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -134,35 +134,55 @@
         <scene sceneID="eTf-La-OUg">
             <objects>
                 <tableViewController id="E1k-VN-nhc" customClass="CarTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="TSB-mN-VZj">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="68" sectionHeaderHeight="22" sectionFooterHeight="22" id="TSB-mN-VZj">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="436"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CarCell" textLabel="Bs5-3O-Fhm" detailTextLabel="fNl-nS-mmD" style="IBUITableViewCellStyleValue1" id="yHu-4L-eHp" customClass="CarTableViewCell">
-                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CarCell" rowHeight="68" id="yHu-4L-eHp" customClass="CarTableViewCell">
+                                <rect key="frame" x="0.0" y="86" width="320" height="68"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="yHu-4L-eHp" id="kTB-Kg-syQ">
-                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="67"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Bs5-3O-Fhm">
-                                            <rect key="frame" x="15" y="10" width="37" height="24"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nQH-b4-mJc" userLabel="PlaceHolder">
+                                            <rect key="frame" x="20" y="14" width="40" height="40"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="40" id="TT7-Ng-6OV"/>
+                                                <constraint firstAttribute="height" constant="40" id="zqV-8f-soE"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year Make Model" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d7M-qH-1O8">
+                                            <rect key="frame" x="76" y="14" width="191" height="20"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="fNl-nS-mmD">
-                                            <rect key="frame" x="250" y="17" width="35" height="16"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                            <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create Time" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l5e-V5-A5p">
+                                            <rect key="frame" x="76" y="37" width="191" height="17"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="centerY" secondItem="nQH-b4-mJc" secondAttribute="centerY" id="9Vj-k4-KBr"/>
+                                        <constraint firstItem="d7M-qH-1O8" firstAttribute="leading" secondItem="nQH-b4-mJc" secondAttribute="trailing" constant="16" id="Bcm-Zj-36H"/>
+                                        <constraint firstItem="nQH-b4-mJc" firstAttribute="bottom" secondItem="l5e-V5-A5p" secondAttribute="bottom" id="MdL-D4-jKC"/>
+                                        <constraint firstAttribute="trailing" secondItem="l5e-V5-A5p" secondAttribute="trailing" constant="20" symbolic="YES" id="Pjh-Gd-U7s"/>
+                                        <constraint firstAttribute="trailing" secondItem="d7M-qH-1O8" secondAttribute="trailing" constant="20" symbolic="YES" id="Q63-vH-1QB"/>
+                                        <constraint firstItem="nQH-b4-mJc" firstAttribute="top" secondItem="d7M-qH-1O8" secondAttribute="top" id="RXj-OV-ppG"/>
+                                        <constraint firstItem="nQH-b4-mJc" firstAttribute="leading" secondItem="kTB-Kg-syQ" secondAttribute="leading" constant="20" symbolic="YES" id="U2U-UT-LTP"/>
+                                        <constraint firstItem="l5e-V5-A5p" firstAttribute="leading" secondItem="nQH-b4-mJc" secondAttribute="trailing" constant="16" id="Ubb-bW-Gm1"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="carImage" destination="nQH-b4-mJc" id="B61-io-gqN"/>
+                                    <outlet property="dateCreatedLabel" destination="l5e-V5-A5p" id="jzL-Qd-cnb"/>
+                                    <outlet property="makeModelLabel" destination="d7M-qH-1O8" id="6tL-yP-F7Y"/>
                                     <segue destination="a1C-JB-vIa" kind="push" identifier="ViewCarSegue" id="Srq-6F-ROu"/>
                                 </connections>
                             </tableViewCell>
