--- a/CarValet/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/CarValet/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -138,9 +138,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="436"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="x9j-Pl-k8s">
+                            <rect key="frame" x="0.0" y="64" width="320" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="bel-66-0Sx">
+                                    <rect key="frame" x="20" y="6" width="280" height="19"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <segments>
+                                        <segment title="Parked"/>
+                                        <segment title="Make"/>
+                                        <segment title="Model"/>
+                                        <segment title="Year"/>
+                                    </segments>
+                                    <connections>
+                                        <action selector="carSortChanged:" destination="E1k-VN-nhc" eventType="valueChanged" id="fQh-3b-Zqt"/>
+                                    </connections>
+                                </segmentedControl>
+                            </subviews>
+                            <color key="backgroundColor" red="0.90196079015731812" green="0.90196079015731812" blue="0.90196079015731812" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstItem="bel-66-0Sx" firstAttribute="leading" secondItem="x9j-Pl-k8s" secondAttribute="leading" constant="20" symbolic="YES" id="7Rt-hf-ep6"/>
+                                <constraint firstItem="bel-66-0Sx" firstAttribute="top" secondItem="x9j-Pl-k8s" secondAttribute="top" constant="6" id="S0m-N0-Zqu"/>
+                                <constraint firstAttribute="trailing" secondItem="bel-66-0Sx" secondAttribute="trailing" constant="20" symbolic="YES" id="VCG-qs-xQH"/>
+                                <constraint firstAttribute="bottom" secondItem="bel-66-0Sx" secondAttribute="bottom" constant="6" id="shE-fi-kYP"/>
+                            </constraints>
+                        </view>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CarCell" rowHeight="68" id="yHu-4L-eHp" customClass="CarTableViewCell">
-                                <rect key="frame" x="0.0" y="86" width="320" height="68"/>
+                                <rect key="frame" x="0.0" y="116" width="320" height="68"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="yHu-4L-eHp" id="kTB-Kg-syQ">
                                     <rect key="frame" x="0.0" y="0.0" width="287" height="67"/>
@@ -200,8 +226,10 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="carSortControl" destination="bel-66-0Sx" id="cmA-7f-vDm"/>
                         <outlet property="doneButton" destination="i9g-Pb-R8N" id="5NP-og-dDV"/>
                         <outlet property="editButton" destination="lMn-LW-1Yj" id="Q7u-2N-VkN"/>
+                        <outlet property="tableHeader" destination="x9j-Pl-k8s" id="WXJ-s7-HY0"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u4u-EF-SW8" userLabel="First Responder" sceneMemberID="firstResponder"/>
